# ferris-proof

./: .gitlab-ci.yml  Cargo.toml  Containerfile  Containerfile.alpine  Contributing.md  Dockerfile  Licence.md  ReadMe.md  cli_commands_unit_test.rs  cli_initialization_property_test.rs  proptest.toml  rust-toolchain.toml
.github/workflows/: ci.yml  property-tests.yml  release.yml
docs/: ci-pipeline.md  ferris-proof.prd.specs.md  ferris-proof.tsd.specs.md  getting-started.md
ferris-proof-cli/: Cargo.toml  ferrisproof.toml
ferris-proof-cli/src/: lib.rs  main.rs
ferris-proof-cli/src/commands/: cache.rs  check.rs  config.rs  explain.rs  generate.rs  init.rs  mod.rs  upgrade.rs
ferris-proof-cli/tests/: cli_commands_unit_test.rs  cli_initialization_property_test.proptest-regressions  cli_initialization_property_test.rs
ferris-proof-config/: Cargo.toml
ferris-proof-config/schemas/: config.json
ferris-proof-config/src/: attributes.rs  config.rs  lib.rs  manager.rs  schema.rs
ferris-proof-config/tests/: config_integration.rs  edge_case_tests.rs  property_tests.rs  standalone_property_test.rs
ferris-proof-core/: Cargo.toml
ferris-proof-core/src/: cache.rs  cache_manager.rs  errors.rs  lib.rs  plugins.rs  types.rs  verification.rs
ferris-proof-core/src/tests/: mod.rs  project_setup_test.rs  project_structure.rs
ferris-proof-core/tests/: cache_integration.rs  cache_property_tests.rs  core_integration_test.rs  project_structure_integration.rs
ferris-proof-plugins/: Cargo.toml
ferris-proof-plugins/src/: lib.rs  proptest_plugin.rs  sandbox.rs  tla_plus.rs
ferris-proof-plugins/tests/: network_isolation_property_test.rs  plugin_system_tests.rs
scripts/: ci-local.sh  ci-setup.sh  ci-test.sh  container-build.sh  run-tests.sh  verify-containerfiles.sh
