[workspace]
members = [
    "ferris-proof-cli",
    "ferris-proof-core",
    "ferris-proof-config",
    "ferris-proof-plugins",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["FerrisProof Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ferris-proof/ferris-proof"
homepage = "https://ferris-proof.dev"
documentation = "https://docs.rs/ferris-proof"
description = "Multi-layer correctness pipeline for Rust applications"
keywords = ["verification", "formal-methods", "property-testing", "rust"]
categories = ["development-tools", "testing"]

[workspace.dependencies]
# CLI and argument parsing
clap = { version = "4.4", features = ["derive", "env", "color"] }

# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# File system and path handling
walkdir = "2.4"
glob = "0.3"
tempfile = "3.8"

# Hashing and caching
blake3 = "1.5"

# JSON Schema validation
jsonschema = "0.17"

# Process execution and sandboxing
which = "5.0"

# Property-based testing framework
proptest = "1.4"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Regex support
regex = "1.10"

# Rust AST parsing
syn = { version = "2.0", features = ["full", "parsing", "printing"] }
quote = "1.0"
proc-macro2 = "1.0"

# Platform detection
cfg-if = "1.0"

# Terminal colors and formatting
colored = "2.1"
console = "0.15"

# HTTP client for tool downloads
reqwest = { version = "0.11", features = ["json", "stream"] }

# Compression
flate2 = "1.0"

# Metrics and observability
prometheus = { version = "0.13", default-features = false }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true
overflow-checks = true