[package]
name = "ferris-proof-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Command-line interface for FerrisProof"
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "ferris-proof"
path = "src/main.rs"

[dependencies]
ferris-proof-core = { path = "../ferris-proof-core" }
ferris-proof-config = { path = "../ferris-proof-config" }

clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
colored.workspace = true
console.workspace = true
dirs.workspace = true
toml = "0.8"

[dev-dependencies]
proptest = "1.4"
tempfile = "3.8"