[package]
name = "ferris-proof-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Core verification engine for FerrisProof"
keywords.workspace = true
categories.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
blake3.workspace = true
chrono.workspace = true
uuid.workspace = true
regex.workspace = true
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
semver.workspace = true
hex.workspace = true
bincode.workspace = true
zstd.workspace = true
dirs.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true