[package]
name = "ferris-proof-plugins"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Plugin system for FerrisProof verification tools"
keywords.workspace = true
categories.workspace = true

[dependencies]
ferris-proof-core = { path = "../ferris-proof-core" }

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
regex.workspace = true
tempfile.workspace = true
uuid.workspace = true
semver.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
proptest.workspace = true